classDiagram
    class MongoConfig {
        +String uri
        +String databaseName
        +fromEnvironment(env)
    }

    class MongoConnection {
        -MongoConfig config
        +client() MongoClient
        +database() MongoDatabase
        +close()
    }

    class DatabaseManager {
        +listDatabaseNames() List~String~
        +selectDatabase(databaseName) MongoDatabase
        +materializeDatabase(databaseName, collectionName)
        +dropDatabase(databaseName)
    }

    class CollectionManager {
        +listCollectionNames() List~String~
        +createCollectionIfMissing(collectionName)
        +materializeCollection(collectionName, document)
        +renameCollection(currentName, newName)
        +dropCollection(collectionName)
    }

    class ProductService
    class ProductRepository {
        <<interface>>
    }
    class BibliotecaService
    class LibraryRepository {
        <<interface>>
    }
    class MongoProductRepository
    class MongoLibraryRepository
    class MongoClient
    class MongoDatabase
    class Product
    class Autor
    class Libro
    class Prestamo
    class LibraryCounts

    MongoConnection --> MongoConfig : usa
    MongoConnection --> MongoClient : crea
    MongoConnection --> MongoDatabase : selecciona
    DatabaseManager --> MongoClient : usa
    CollectionManager --> MongoDatabase : usa
    MongoProductRepository ..|> ProductRepository
    MongoLibraryRepository ..|> LibraryRepository
    MongoProductRepository --> MongoDatabase : usa colección
    MongoLibraryRepository --> MongoDatabase : usa colecciones
    ProductService --> ProductRepository : depende de
    BibliotecaService --> LibraryRepository : depende de
    ProductRepository --> Product : persiste
    LibraryRepository --> Autor : persiste
    LibraryRepository --> Libro : persiste
    LibraryRepository --> Prestamo : persiste
    BibliotecaService --> LibraryCounts : construye
